# faster-chant-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  push.sh
.github/workflows/: build.yml  notify.yml
docs/: TRAY_DESIGN.md
src/: calibration.rs  config.rs  defaults.rs  editor.rs  kda.rs  logger.rs  main.rs  ocr.rs  scheme.rs  search.rs  sender.rs  settings.rs  window.rs
src/auto/: calibration.rs  mod.rs  sender.rs
src/core/: kda.rs  mod.rs  ocr.rs
src/scheme/: defaults.rs  mod.rs
src/ui/: mod.rs  search.rs  tray.rs
