[package]
name = "faster-chant-rs"
version = "0.1.0"
edition = "2021"
description = "300英雄快捷喊话工具 Rust 重制版"
license = "MIT"
repository = "https://github.com/yehuoshun/faster-chant-rs"
authors = ["yehuoshun"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Storage_Streams",
    "Win32_System_Ole",
    "Media_Ocr",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pinyin = "0.10"
eframe = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true